src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__panels__tests__snapshot_state_setting_up.snap
---
source: src/commands/task/orchestrate/panels.rs
expression: snapshot
---
╭ W1 [10.1] ─────────────────────────────────────╮
│⚙ setup                                         │
│                                                │
│                                                │
╰ $0.0000 │ ↓0 ↑0 ───────────────────────────────╯
