src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__panels__tests__snapshot_state_verifying.snap
---
source: src/commands/task/orchestrate/panels.rs
expression: snapshot
---
╭ W3 [7.1] ──────────────────────────────────────╮
│◉ verify                                        │
│                                                │
│                                                │
╰ $0.0000 │ ↓0 ↑0 ───────────────────────────────╯
