src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__panels__tests__snapshot_title_no_component_no_model.snap
---
source: src/commands/task/orchestrate/panels.rs
expression: snapshot
---
╭ W3 [---] ──────────────────────────────────────╮
│○ idle                                          │
│                                                │
│                                                │
╰ $0.0000 │ ↓0 ↑0 ───────────────────────────────╯
