src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__panels__tests__snapshot_title_with_component_and_model.snap
---
source: src/commands/task/orchestrate/panels.rs
expression: snapshot
---
╭ W1 [3.2: frontend] (sonnet) ───────────────────╮
│● implementing                                  │
│                                                │
│                                                │
╰ $0.0150 │ ↓800 ↑400 ───────────────────────────╯
