src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__panels__tests__snapshot_unicode_cjk_output.snap
---
source: src/commands/task/orchestrate/panels.rs
expression: snapshot
---
╭ W1 [19.1: i18n] ─────────────────────────────────────────╮
│● implementing                                            │
│中文测试 Chinese test                                     │
│日本語テスト Japanese test                                │
│한글 테스트 Korean test                                   │
│Mixed: 中文 and English                                   │
│                                                          │
│                                                          │
│                                                          │
╰ $0.0000 │ ↓0 ↑0 ─────────────────────────────────────────╯
