src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__panels__tests__snapshot_unicode_emoji_output.snap
---
source: src/commands/task/orchestrate/panels.rs
expression: snapshot
---
╭ W1 [18.1: core] ─────────────────────────────────────────╮
│● implementing                                            │
│🚀 Starting build process                                 │
│✅ Tests passed successfully                              │
│❌ Linter found issues                                    │
│⚠️  Warning: deprecated API                               │
│                                                          │
│                                                          │
│                                                          │
╰ $0.0000 │ ↓0 ↑0 ─────────────────────────────────────────╯
