src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__panels__tests__snapshot_unicode_mixed_polish_emoji_cjk.snap
---
source: src/commands/task/orchestrate/panels.rs
expression: snapshot
---
╭ W1 [zażółć: środowisko] ───────────────────────────────────────────╮
│◉ verify                                                            │
│🚀 Uruchamianie testów                                              │
│✅ Test został zakończony pomyślnie                                 │
│中文: 测试通过                                                      │
│❌ Błąd: nie znaleziono pliku                                       │
│                                                                    │
│                                                                    │
│                                                                    │
╰ $0.0000 │ ↓0 ↑0 ───────────────────────────────────────────────────╯
