src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__panels__tests__snapshot_unicode_polish_task_id_component.snap
---
source: src/commands/task/orchestrate/panels.rs
expression: snapshot
---
╭ W1 [zażółć: środowisko] (sonnet) ────────────────────────╮
│● implementing                                            │
│                                                          │
│                                                          │
│                                                          │
╰ $0.0420 │ ↓1.5k ↑2.3k ───────────────────────────────────╯
