src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__panels__tests__snapshot_verify_profiles.snap
---
source: src/commands/task/orchestrate/panels.rs
expression: snapshot
---
╭ W1 [8.1] ────────────────────────────────────────────────╮
│◉ verify [lint ✓, test ✗, build ⏳]                       │
│                                                          │
│                                                          │
│                                                          │
╰ $0.0000 │ ↓0 ↑0 ─────────────────────────────────────────╯
